--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,7 @@ EXPERIENCES
   font-size: 1.6em;
   font-weight: bold;
 }
-.job .description{
+.job .description p{
   font-size: 1.2em;
   line-height: 1.5em;
 }
