--- a/css/main.css
+++ b/css/main.css
@@ -242,6 +242,18 @@ SKILLS
   font-size: 1.3em;
   font-weight: 600;
 }
+.item-skills2{
+  height: 30px;
+  background: #000000;
+  color: #fff;
+  padding: 5px 10px;
+  margin-bottom: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1.3em;
+  font-weight: 600;
+}
 .skills-legend{
   margin-top: 20px;
   opacity: 0.8;
@@ -312,8 +324,8 @@ HOBBIES
   display: inline-block;
   margin-right: 5px;
   margin-bottom: 5px;
-  padding: 5px 5px 5px 25px;
-  background: #FF0000;
+  padding: 5px 10px 5px 25px;
+  background: #000000;
   position: relative;
   font-size: 1.2em;
 }
