--- a/css/main.css
+++ b/css/main.css
@@ -242,18 +242,10 @@ SKILLS
   font-size: 1.3em;
   font-weight: 600;
 }
-.item-skills2{
-  height: 30px;
-  background: #000000;
-  color: #fff;
-  padding: 5px 10px;
-  margin-bottom: 5px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: 1.3em;
-  font-weight: 600;
-}
+  .item-skills.skills-black{
+    background: #000000;
+    color: #fff;
+  }
 .skills-legend{
   margin-top: 20px;
   opacity: 0.8;
