--- a/css/main.css
+++ b/css/main.css
@@ -331,6 +331,35 @@ HOBBIES
   left: 7px;
 }
 /*******************************************
+QUOTE
+*******************************************/
+#quote-footer{
+}
+#text-footer h1{
+  margin: 0;
+  padding: 0;
+  font-size: 2.4em;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  color: #555555;
+}
+#text-footer h1 span{
+  color: #999999;
+}
+#text-footer h1 sup{
+  font-size:3.0em;
+  opacity: 0.5;
+}
+#text-footer:before{
+  width: 100%;
+  height: 3px;
+  background: url(../img/line.png);
+  margin-bottom: 15px;
+  content: '';
+  display: block;
+}
+/*******************************************
 MEDIA
 *******************************************/
 @media (min-width: 500px) {
