--- a/css/main.css
+++ b/css/main.css
@@ -334,6 +334,7 @@ HOBBIES
 QUOTE
 *******************************************/
 #quote-footer{
+  padding: 10px 0 40px;
 }
 #text-footer h1{
   margin: 0;
@@ -348,7 +349,7 @@ QUOTE
   color: #555555;
 }
 #text-footer h1 sup{
-  font-size:8.0em;
+  font-size:5.0em;
   opacity: 0.5;
 }
 #text-footer:before{
