--- a/css/main.css
+++ b/css/main.css
@@ -342,15 +342,22 @@ QUOTE
   font-size: 1.75em;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: -1px;
+  letter-spacing: 1px;
   color: #999999;
 }
-#text-footer h1 span{
-  color: #555555;
-}
 #text-footer h1 strong{
-  font-size:5.0em;
+  font-size:1.5em;
   opacity: 0.5;
+  margin: 0 0.25em;
+}
+#text-footer h2{
+  margin: 0;
+  padding: 0;
+  font-size: 1.25em;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #555555;
 }
 #text-footer:before{
   width: 100%;
