--- a/css/main.css
+++ b/css/main.css
@@ -340,7 +340,7 @@ QUOTE
   margin: 0;
   padding: 0;
   font-size: 1.75em;
-  font-weight: 700;
+  font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1px;
   color: #999999;
@@ -351,10 +351,10 @@ QUOTE
   margin: 0 0.25em;
 }
 #text-footer h2{
-  margin: 0;
+  margin: 0.5em 0;
   padding: 0;
-  font-size: 1.25em;
-  font-weight: 700;
+  font-size: 1.5em;
+  font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 1px;
   color: #555555;
